# fabseapp_tauri

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.woodpecker/: build_push.yml
public/: welcome.avif
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
