[package]
name = "fabseapp-ui"
version = "0.0.1"
edition = "2021"

[dependencies]
leptos = { version = "0", features = ["csr"] }
wasm-bindgen = { version = "0", features = ["serde-serialize"] }
wasm-bindgen-futures = "0"
js-sys = "0"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0"

[workspace]
members = ["src-tauri"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
strip = true
