[package]
name = "fabseapp_tauri"
version = "0.0.1"
edition = "2021"

[dependencies]
js-sys = "0"
leptos = { version = "0", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0"
wasm-bindgen = { version = "0", features = ["serde-serialize"] }
wasm-bindgen-futures = "0"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
